--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>Nhu To Luong</h1>
+			<p>human-computer interaction &middot; computer science &middot; crowdsourcing</p>
 		</div>
 
 
@@ -30,50 +30,20 @@
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div id="project1">
 			<a href="project.html">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+				<img src="https://uploads-ssl.webflow.com/5c7d628ad99ee55d288b6eb6/5d7a93f6a9740c5a3d56be2f_compass%20gif.gif" alt="Lorem Pixel image">
+				<p>Interning at Compass</p>
 			</a>
 		</div>
 		<div id="project2">
 			<a href="project.html">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
-				<p>Needfinding</p>
-			</a>
-		</div>
-		<div id="project3">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
-				<p>Prototyping</p>
+				<img src="https://uploads-ssl.webflow.com/5c7d628ad99ee55d288b6eb6/5c7d6c3b314d16d32ddcb098_SICKEM%20GIF.gif" alt="Lorem Pixel image">
+				<p>Graphic Design</p>
 			</a>
 		</div>
 		<div id="project4">
 			<a href="project.html">
-				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
-				<p>Heuristic Evaluation</p>
-			</a>
-		</div>
-		<div id="project5">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
-				<p>Visualization</p>
-			</a>
-		</div>
-		<div id="project6">
-			<a href="project.html">
-				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
-				<p>Social design</p>
-			</a>
-		</div>
-		<div id="project7">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
-				<p>Gestural interaction</p>
-			</a>
-		</div>
-		<div id="project8">
-			<a href="project.html">
-				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
-				<p>Design tools</p>
+				<img src="https://uploads-ssl.webflow.com/5c7d628ad99ee55d288b6eb6/5c9ecf0ff4c36e521f79f4df_pram.png" alt="Lorem Pixel image">
+				<p>UI Design</p>
 			</a>
 		</div>
 	</div>
